# receipt-fetcher

./: .gitignore  GEMINI.md  README.md  pyproject.toml  result.xlsx  stores.json
files/: D684E3B4F194706507182AD7_receipt.html
src/receipt_fetcher/: __init__.py  exporter.py  fetcher.py  main.py  parser.py
