[project]
name = "receipt-fetcher"
version = "0.1.0"
description = "CLI tool to fetch and parse Eurotorg receipts into Excel"
readme = "README.md"
authors = [
    { name = "conductor85", email = "conductor85@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
	"bs4",
    "requests",
    "pdfplumber",
    "openpyxl",
]
[project.scripts]
receipt-fetcher = "receipt_fetcher.main:main"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
